# td3-v2

./: README.md
guias_codigo/: README.md
guias_codigo/guia1/: funciones.cpp  funciones.h  main  main.cpp
guias_codigo/guia3/: funciones.cpp  funciones.h  main.cpp
guias_codigo/guia4/complejidad/: funciones.cpp  funciones.h
guias_codigo/guia4/recursion/: funciones.cpp  funciones.h  main.cpp
guias_codigo/guia5/: funciones.cpp  funciones.h  main.cpp
guias_codigo/guia6/: main  main.cpp
guias_codigo/guia6/classes/: Carrito.cpp  Carrito.h  Conjunto.cpp  Conjunto.h  Examenes.cpp  Examenes.h  Fecha.cpp  Fecha.h  Inmobiliaria.cpp  Inmobiliaria.h  Libro.cpp  Libro.h  Multiconjunto.cpp  Multiconjunto.h  Palabras.cpp  Palabras.h  Reservas.cpp  Reservas.h  Usuario.cpp  Usuario.h
guias_codigo/guia7/: a.out  funciones.cpp  funciones.h  main  main.cpp
guias_codigo/guia7/classes/: BolsaMinHeap.cpp  BolsaMinHeap.h  Diccionario.cpp  Diccionario.h  Diccionario2.cpp  Diccionario2.h  DiccionarioDeInt.cpp  DiccionarioDeInt.h  FilaDeSuper.cpp  FilaDeSuper.h  FilaDeSuper2.cpp  FilaDeSuper2.h  Pila.cpp  Pila.h
guias_codigo/guia7/trees/: BST.h  BST_2.h  BST_3.h
guias_enunciados/: README.md
guias_tex/: README.md
guias_tex/guia2/: guia2.tex
guias_tex/guia3/: guia3.tex
guias_tex/guia4/: guia4.fdb_latexmk  guia4.fls  guia4.tex
guias_tex/guia6/: guia6.tex
practicas/: README.md
practicas/6-complejidad/: practicaComplejidad.fdb_latexmk  practicaComplejidad.fls  practicaComplejidad.tex
practicas/7-ordenamiento/: main.cpp  practicaOrdenamiento.tex
practicas/7-ordenamiento/src/: funciones.cpp  (+2 more)
practicas/8-OOP/: fecha.cpp  main  tateti.cpp
practicas/9-invariante/: practicaInvariante.tex
tps/taller1/: funciones.cpp  wordle.cpp
tps/taller2/: README.md  lista.h  test_parte1.cpp  test_parte2.cpp
tps/tp/: CMakeLists.txt  editor_main.cpp  editor_tests.cpp  editor_texto.cpp  editor_texto.h  resaltador.cpp  resaltador.h  resaltador_tests.cpp  sintaxis-b.txt  sintaxis-cpp.txt  sintaxis-py.txt  sintaxis.txt  ui.hpp
(+13 files in other folders)
